<resources>
    <string name="app_name">Amberd</string>
    <string name="authorization_text">Authorization</string>
    <string name="username_text">Username</string>
    <string name="password_text">Password</string>
    <string name="log_in_text">Log in</string>
    <string name="sign_in_text">Sign in</string>
    <string name="goods_text">Goods</string>
    <string name="create_new_account_text">Create new account</string>
    <string name="email_text">Email</string>
    <string name="no_text">No Text</string>
    <string name="buy_text">Buy</string>
    <string name="more_text">More</string>
</resources>