<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#5BAE5F"
    tools:context=".Activities.AuthActivity"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="170dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/authorization_text"
        android:textColor="#fdfdfd"
        android:textSize="25sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/user_login_auth"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/username_text"
        android:textColorHint="#535252"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:textColor="#fdfdfd"/>

    <EditText
        android:id="@+id/user_password_auth"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/password_text"
        android:inputType="textPassword"
        android:textColor="#fdfdfd"
        android:textColorHint="#535252" />

    <Button

        android:id="@+id/button_auth"

        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:text="@string/log_in_text"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:textColor="#fff"
        android:backgroundTint="#201E28"
        android:layout_marginTop="30dp"/>


    <TextView
        android:id="@+id/link_to_reg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="120dp"
        android:fontFamily="@font/inter"
        android:text="@string/sign_in_text"

        android:textColor="#fdfdfd"
        android:textSize="20sp" />
</LinearLayout>